quality, publish map, compute  (#227)
* test: sonar + TU

* fix(CVE): critical

* feat(security): update springboot

* chore(migration) SpringBoot 4

* test(config) add

* test(@Autowired): change impl to prepare better unit tests

* test(@Autowired): change impl to prepare better unit tests

* feat(osm): overpass parser

* feat(osm): overpass parser

* feat(osm): overpass parser

* test(various): add for memory

* test(various): add for memory

* doc(complete): add missing

* feat(osm): overpass view

* feat(osm): overpass view

* feat(osm): overpass integration

* feat(osm): overpass integration

* refactor(restClient): migration from okhttp3 to RestClient

* refactor(restClient): migration from okhttp3 to RestClient

* refactor(restClient): migration from okhttp3 to RestClient

* chore(cleanup): cleanup imports

* feat(osm): overpass UI

* feat(osm): overpass UI

* perf(compute): redure nb of points in shape

* perf(compute): redure nb of points in shape

* refactor(remove obsolete): delete v1.x.x

* doc: add javadoc

* fix: artifact name

* fix(simulator): color

* fix(simulator): preset de ville

* fix(carte): label

* chore(epci): update data

* chore: finalize merge

* feat(epci): add filter

* feat(map): IRIS population

* feat(poposal): finest Genetic Algo

* feat(poposal): finest Chi2 Algo

* feat(poposal): finest PPC

* feat(poposal): finest PPC

* feat(sea): add seo bots and llms

* chore(data): prepare mass loading data

* chore(licence): change to AGPL

* feat(seo): add seo bots and llms

* feat(filosofil): add 2021

* feat(job): add year of computation

* feat(job): add dashboard

* chore(2021): add 2021 data

* feat(job): add dashboard

* feat(job): add dashboard

* feat(job): add dashboard

* fix(iris): compute surface

* feat(job): add dashboard

* feat(git): continue git

* feat(git): continue git

* fix(url): relative url

* fix(url): relative url

* feat(publish): publish action

* feat(publish): publish action

* feat(publish): publish action

